@@ -85,6 +85,7 @@ Bug fixes:
 - PR#6791: "%s@[", "%s@{" regression in Scanf
   (Benoît Vaugon)
 - PR#6799: include guards missing for unixsupport.h and other files
+- PR#6812: -short-paths and -no-alias-deps can create inconsistent assumptions
 - GPR#143: fix getsockopt behaviour for boolean socket options
   (Anil Madhavapeddy and Andrew Ray)
 - ocamlbuild on cygwin cannot find ocamlfind
